<resources>
    <string name="app_name">NS</string>
    <string name="hello_world">hello world</string>

    <string name="sign_up"><u>Sign Up</u></string>
    <string name="hint_id">아이디를 입력해 주세요</string>
    <string name="hint_pw">비밀번호를 입력해 주세요</string>

    <string name="hint_pw2">비밀번호를 다시 한번 입력해 주세요</string>

    <string name="hint_name">이름을 입력해 주세요</string>
    <string name="my_point"><u>나의포인트내역</u></string>

    <string name="header">Emulate NFC Forum Type-4 tag</string>
    <string name="description">This example emulates a type-4 tag with an NDEF record (RTD_TEXT). It uses an aid-filter F0394148148100 for the APDU SELECT command.</string>
    <string name="set_ndef_button">Set NDEF Text</string>
    <string name="action_settings">Settings</string>
    <string name="servicedesc">The Magical HCE Demo Service</string>
    <string name="aiddescription">Chrome NFC demo</string>
</resources>
