<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="kr.ac.incheon.ns.ns.SignupActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerInParent="true">

        <EditText
            android:id="@+id/edt_userid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/edt_login_style"
            android:hint="@string/hint_id"/>

        <EditText
            android:id="@+id/edt_pw1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/edt_login_style"
            android:inputType="textPassword"
            android:hint="@string/hint_pw"/>

        <EditText
            android:id="@+id/edt_pw2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/edt_login_style"
            android:inputType="textPassword"
            android:hint="@string/hint_pw2"/>

        <EditText
            android:id="@+id/edt_usernm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            style="@style/edt_login_style"
            android:hint="@string/hint_name"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_signup"
            style="@style/btn_login_corner_style"
            android:layout_marginBottom="10dp"
            android:text="회원가입"/>

    </LinearLayout>

</RelativeLayout>
